<resources>
    <string name="app_name">PropertyAnimationTutPlus</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="wheel">Steering Wheel</string>
    <string name="ground">The Ground</string>
    <string name="window">Window Frame</string>
    <string name="sun">The Sun</string>
    <string name="cloud">A Cloud</string>
    <string name="title_activity_timer">Timer</string>
    <string name="title_activity_drag_and_drop">DragAndDrop</string>
    <string name="intro">Place these foods in your order of preference.</string>

    <string name="option_1">Apple</string>
    <string name="option_2">Cake</string>
    <string name="option_3">Cheese</string>

    <string name="choice_1">Most favorite</string>
    <string name="choice_2">-</string>
    <string name="choice_3">Least favorite</string>
    <string name="title_activity_experiment">ExperimentActivity</string>
    <string name="title_activity_some">SomeActivity</string>
    <string name="title_activity_compass">CompassActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_tone_generator">ToneGeneratorActivity</string>


</resources>
